--- a/templateNodeModules/package.json
+++ b/templateNodeModules/package.json
@@ -2,8 +2,8 @@
   "name": "aula93",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": { 
-    "gera": "webpack -w" 
+  "scripts": {
+    "gera": "webpack -w"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +14,12 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "babel-loader": "^10.0.0",
-    "core-js": "^3.41.0",
     "prettier": "^3.5.3",
-    "regenerator-runtime": "^0.14.1",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "core-js": "^3.41.0",
+    "regenerator-runtime": "^0.14.1"
   }
 }
