--- a/Sections/Projects/Schedule/package.json
+++ b/Sections/Projects/Schedule/package.json
@@ -24,7 +24,8 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "regenerator-runtime": "^0.14.1",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "validator": "^13.15.0"
   },
   "description": "",
   "devDependencies": {
