--- a/Sections/Projects/api_rest/package.json
+++ b/Sections/Projects/api_rest/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "api_rest",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "eslint": "^9.24.0",
-    "globals": "^16.0.0",
-    "nodemon": "^3.1.9",
-    "sucrase": "^3.35.0"
-  }
+    "name": "api_rest",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "eslint": "^6.6.0",
+        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-plugin-import": "^2.20.1",
+        "nodemon": "^3.1.9",
+        "sucrase": "^3.35.0"
+    },
+    "dependencies": {
+        "express": "^5.1.0"
+    }
 }
