--- a/Sections/Projects/api_rest/package.json
+++ b/Sections/Projects/api_rest/package.json
@@ -15,9 +15,15 @@
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.20.1",
         "nodemon": "^3.1.9",
+        "sequelize-cli": "^6.6.2",
         "sucrase": "^3.35.0"
     },
     "dependencies": {
-        "express": "^5.1.0"
+        "bcryptjs": "^3.0.2",
+        "dotenv": "^16.4.7",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "mariadb": "^3.4.1",
+        "sequelize": "^6.37.7"
     }
 }
