--- a/Sections/Projects/react/react-base/package.json
+++ b/Sections/Projects/react/react-base/package.json
@@ -7,7 +7,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "history": "^5.3.0",
+    "history": "^4.10.1",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
