--- a/Sections/Projects/react/consumerapi/package.json
+++ b/Sections/Projects/react/consumerapi/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "history": "^4.10.1",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -22,6 +23,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.17",
+    "validator": "^13.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
